Div fixes on mobile.

--- a/webroot/css/pollView.css
+++ b/webroot/css/pollView.css
@@ -53,6 +53,10 @@ small {
 .editRow{
     margin-left: 0px;
 }
+
+.edit-icons{
+    vertical-align: middle;
+}
 /* Small devices (landscape phones, 576px and up) */
 
 @media (min-width: 576px) {
